[package]
name = "tree-sitter-abap-parser"
description = "A tree sitter parser implementation for the ABAP programming language"
version = "0.1.0"
authors = ["Taj Singh <tjgurwara99@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "abap-parser"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tjgurwara99/tree-sitter-abap-parser"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
